Fix some styling colours

--- a/events/templates/events/about.html
+++ b/events/templates/events/about.html
@@ -181,6 +181,8 @@ About • Spooky Experiences
   </div>
 </section>
 
-
+<div class="mt-4 text-center">
+    <a href="/" class="btn btn-outline-warning">Back to Home</a>
+  </div>
 
 {% endblock %}
