--- a/events/templates/events/event_list.html
+++ b/events/templates/events/event_list.html
@@ -5,7 +5,7 @@ Events • Spooky Experiences
 {% endblock %}
 
 {% block content %}
-<h1 class="mb-4 text-center">Events</h1>
+<h1 class="mb-4 text-center">📅 Events</h1>
 
 <!-- FILTER BAR -->
  <form method="get" 
