--- a/events/templates/events/privacy.html
+++ b/events/templates/events/privacy.html
@@ -114,8 +114,6 @@ Privacy Policy • Spooky Experiences
       </div>
     </div>
 
-    <hr class="border-secondary opacity-50 my-4">
-
     <div class="accordion-item bg-dark text-light border-secondary">
       <h2 class="accordion-header" id="priv7">
         <button class="accordion-button bg-dark text-light collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse7">
@@ -146,7 +144,7 @@ Privacy Policy • Spooky Experiences
   </div>
 
   <div class="mt-4 text-center">
-    <a href="/" class="btn btn-orange">Back to Home</a>
+    <a href="/" class="btn btn-outline-warning">Back to Home</a>
   </div>
 </div>
 {% endblock %}
