fix image on home page

--- a/events/templates/events/home.html
+++ b/events/templates/events/home.html
@@ -5,27 +5,13 @@ Home • Spooky Experiences
 {% endblock %}
 
 {% block content %}
-<section class="position-relative text-light py-5 py-md-6 mx-lg-n150 mt-lg-n50"
-         style="min-height: 80vh; display: flex; align-items: center; overflow: hidden;">
-
-  <!-- Background Image -->
-  <!-- <div class="position-absolute top-0 start-0 w-100 h-100 d-none d-lg-block"
-       style="
-         background: url('/static/images/background-2.webp') right center / contain no-repeat;
-         z-index: -50; opacity: 0.4;
-       "></div> -->
-
-  <!-- Dark Overlay -->
-  <!-- <div class="position-absolute top-0 start-0 w-100 h-100"
-       style="
-         z-index: -49;
-       "></div> -->
+<section class="position-relative text-light py-5 py-md-6">
 
   <!-- Foreground Content -->
   <div class="container-fluid position-relative" style="z-index: 10;">
     <div class="row align-items-center">
       <div class="col-lg-7">
-        <img src="static/images/goblin-hero.webp" alt="image of a goblin cooking" class="img-fluid goblin-hero">
+        <img src="static/images/goblin-hero.webp" alt="image of a goblin cooking" class="img-fluid">
       </div>
 
       <div class="col-lg-5">
