--- a/events/templates/events/home.html
+++ b/events/templates/events/home.html
@@ -15,15 +15,8 @@ Home • Spooky Experiences
       </div>
 
       <div class="col-lg-5">
-        <h1 class="display-5 fw-bold mb-3 title-heading title-xl">GRAVE GETAWAYS</h1>
-        <p class="lead mb-4 sub-heading">
-          <!-- Join us beyond the veil — a curated collection of haunted events, paranormal tours, and otherworldly adventures.
-          Whether you’re a curious mortal or a part-time phantom, there's something chilling for everyone. -->
-        </p>
+        <img src="static/images/full-logo.png" alt="Spooky Experiences Logo" class="mb-4 img-fluid">
 
-        <a href="/events/" class="btn btn-orange btn-lg me-2">
-          Browse Events <i class="bi bi-arrow-right-circle ms-2"></i>
-        </a>
 
         <a href="/about/" class="btn btn-outline-warning btn-lg">Learn More</a>
       </div>
