--- a/static/css/site.css
+++ b/static/css/site.css
@@ -181,3 +181,8 @@ a,
     border-color: #FE4701;
     box-shadow: 0 0 0 .25rem rgba(254, 71, 1, .25);
 }
+
+.img-fluid {
+    max-width: 80%;
+    height: auto;
+}
