--- a/templates/base.html
+++ b/templates/base.html
@@ -24,8 +24,9 @@
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top bg-dark">
       <div class="container">
         <a class="navbar-brand title-heading fw-bold" href="/">
-          <img src="/static/images/logo-1.png" alt="logo">
-          GRAVE GETAWAYS</a>
+          <img src="/static/images/logo-icon.png" alt="logo" style="height: 60px; display: inline-block; margin-right: 10px;">
+          Lost Souls
+        </a>
 
         <button
           class="navbar-toggler"
