remove margin at top of home page

--- a/events/templates/events/home.html
+++ b/events/templates/events/home.html
@@ -5,7 +5,7 @@ Home • Spooky Experiences
 {% endblock %}
 
 {% block content %}
-<section class="position-relative text-light py-5 py-md-6">
+<section class="position-relative text-light">
 
   <!-- Foreground Content -->
   <div class="container-fluid position-relative" style="z-index: 10;">
