Add small styling tweaks

--- a/events/templates/events/about.html
+++ b/events/templates/events/about.html
@@ -16,7 +16,7 @@ About • Spooky Experiences
 
   <div class="mb-4">
     <p>
-      We’re <strong class="text-warning">*name*</strong> — the afterlife’s 
+      We’re <strong class="text-warning">Lost Souls</strong> — the afterlife’s 
       <em>#1 destination</em> for ghostly experiences where spirits come to unwind, raise a little hell, or both.
     </p>
     <p>
