Add Favicon to site.

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
     <link href="/static/css/site.css" rel="stylesheet">
     <link href="/static/css/trick-or-treat.css" rel="stylesheet">
 
+    <link rel="icon" type="image/x-icon" href="{% static 'images/icons8-scream-128.png' %}">
 
   </head>
   <body>
