--- a/static/css/site.css
+++ b/static/css/site.css
@@ -123,6 +123,10 @@ a,
 }
 
 /* Styling classes */
+.heading-font {
+    font-family: var(--title-font);
+}
+
 .title-heading {
     font-family: var(--title-font);
     color: var(--accent-color);
@@ -152,6 +156,10 @@ a,
     position: relative;
     top: 2px;
     margin-right: -30px;
+}
+
+.text-secondary {
+    color: #adbecd !important;
 }
 
 /* Media queries */
@@ -185,4 +193,5 @@ a,
 .img-fluid {
     max-width: 80%;
     height: auto;
+    overflow: visible;
 }
