--- a/static/css/site.css
+++ b/static/css/site.css
@@ -10,6 +10,7 @@
     --secondary-color: rgb(132, 142, 150);
     --accent-color: #FE4701;
     --link-color: #f6a824;
+    --navlink-color: #adbecd;
 
     --background-new: #122220;
 }
@@ -54,7 +55,7 @@ main {
 a,
     .nav-link,
     .navbar-brand {
-    color: var(--accent-color);
+    color: var(--navlink-color);
 }
 
 a, 
@@ -87,8 +88,8 @@ a,
 }
 
 .btn-outline-warning {
-    color: var(--accent-color);
-    border: 2px solid var(--accent-color);
+    color: var(--link-color);
+    border: 2px solid var(--link-color);
 }
 
 .btn-outline-warning:hover{
