Update social links with aria-labels

--- a/templates/base.html
+++ b/templates/base.html
@@ -127,9 +127,9 @@
         <!-- Social -->
         
           <div class="col-lg-6 text-center text-lg-end mt-3 mt-lg-0">
-            <a href="#" class="text-secondary fs-5 me-3 hover-orange"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="text-secondary fs-5 me-3 hover-orange"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="text-secondary fs-5 me-3 hover-orange"><i class="bi bi-twitter-x"></i></a>
+            <a href="https://www.facebook.com/" target="_blank" class="text-secondary fs-5 me-3 hover-orange" aria-label="Go to facebook page"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/" target="_blank" class="text-secondary fs-5 me-3 hover-orange" aria-label="Go to instagram page"><i class="bi bi-instagram"></i></a>
+            <a href="https://x.com/" target="_blank" class="text-secondary fs-5 me-3 hover-orange" aria-label="Go to twitter page"><i class="bi bi-twitter-x"></i></a>
           </div>
           </div>
       </div>
